--- a/source/_posts/数据库路由组件设计.md
+++ b/source/_posts/数据库路由组件设计.md
@@ -29,7 +29,7 @@ tags:
 - 如何实现比较均匀的路由散列算法
 - 如何拦截并修改SQL
 
-![image-20240306111639672](..\images\image-20240306111639672.png)
+![image-20240306111639672](https://web-mhe.oss-cn-beijing.aliyuncs.com/hexo/image-20240306111639672.png)
 主要包括
 - aop切面编程：拦截需要使用DB路由的方法，这里采用自定义注解
 - 数据库连接池配置：分库分表需要按需配置数据库连接源，在这些连接池的集合中进行**动态数据源切换**
