--- a/source/_posts/服务治理.md
+++ b/source/_posts/服务治理.md
@@ -11,7 +11,7 @@ tags:
 每个服务节点在启动运行的时候，会向注册中心注册服务，也就是将自己的地址信息（ip，端口，服务名字等）上报给注册中心，注册中心将地址信息保存起来。
 一个服务节点如果要调用另外一个服务节点，会直接用该服务的信息到注册中心要对方的地址信息，这就**服务发现**。拿到地址信息之后，还会在本地缓存一份，保证在注册中心宕机时仍然可以正常调用服务。
 为了保证服务地址列表中都是可用服务的地址信息，注册中心通常会通过**心跳机制**来检测服务是否可用。
-![image-20231226100852374](..\images\image-20231226100852374.png)
+![image-20231226100852374](https://web-mhe.oss-cn-beijing.aliyuncs.com/hexo/image-20231226100852374.png)
 
 # 分布式下如何进行配置管理
 ## 为什么要用配置中心
